# theia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  requirement.txt  requirements.txt  setup.cfg  setup.py
api/: __init__.py  app.py  commandline.py  middleware.py  server.py
api/config/: database.py
api/models/: therapist.py  user.py
api/routers/: home.py
api/routers/v1/: __init__.py  recommender.py  users.py
docs/: Makefile  report.md
kubernetes/: deployment.yaml
tests/: model_test.py
theia/: __init__.py  main.py  model.py
theia/callbacks/: wandb_callback.py
theia/config/: __init__.py  dataset.py  model_config.py  model_definition.py
theia/config/classification/: __init__.py  model_config.py
theia/config/recommender/: dataset.py  download_from_gcs.py  gcs_utils.py  hyperparameters.py  params.py  retrieval_definition.py
theia/model/: config.py  custom_callback.py  model.py
theia/models/: _retrieval_model.py  classification_model.py  ranking_model.py  retrieval_model.py
theia/utils/: logger.py
wandb/run-20220516_143623-1mjv4b2p/: run-1mjv4b2p.wandb
wandb/run-20220516_143623-1mjv4b2p/files/: config.yaml  wandb-metadata.json
wandb/run-20220516_143714-3uaped18/: run-3uaped18.wandb
wandb/run-20220516_143714-3uaped18/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_144249-1lwuy9kz/: run-1lwuy9kz.wandb
wandb/run-20220516_144249-1lwuy9kz/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_144827-nadxtkhh/: run-nadxtkhh.wandb
wandb/run-20220516_144827-nadxtkhh/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_150656-1y7jrwpg/: run-1y7jrwpg.wandb
wandb/run-20220516_150656-1y7jrwpg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_151205-11gkhafp/: run-11gkhafp.wandb
wandb/run-20220516_151205-11gkhafp/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_151510-2hsca39i/: run-2hsca39i.wandb
wandb/run-20220516_151510-2hsca39i/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_151910-288enlb7/: run-288enlb7.wandb
wandb/run-20220516_151910-288enlb7/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_152744-lhn1ynz0/: run-lhn1ynz0.wandb
wandb/run-20220516_152744-lhn1ynz0/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_170954-3l8aqp0j/: run-3l8aqp0j.wandb
wandb/run-20220516_170954-3l8aqp0j/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20220516_181559-1yoyhy0x/: run-1yoyhy0x.wandb
wandb/run-20220516_181559-1yoyhy0x/files/: config.yaml  (+2 more)
(+1 files in other folders)
