[metadata]
name = theia
version = 0.0.1
description = Sentiment analysis using the Keras library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomiaditya/theia
author = Thomi Aditya Alhakiim
author_email = thomiaditya@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
keywords = sentiment analysis

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    alive_progress==2.4.1
    matplotlib==3.5.2
    numpy==1.21.3
    tensorflow==2.8.0
    tensorflow_datasets==4.5.2
    wandb==0.12.16

[options.packages.find]
exclude =
    docs
    tests

[options.entry_points]
console_scripts =
    theia-cli = api.app:main
