[metadata]
name = theia
version = 0.0.1
description = Sentiment analysis using the Keras library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomiaditya/theia
author = Thomi Aditya Alhakiim
author_email = thomiaditya@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
keywords = sentiment analysis

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    alive_progress==2.4.1
    matplotlib==3.5.2
    numpy==1.21.3
    pandas==1.4.2
    tensorflow==2.9.1
    tensorflow_datasets==4.5.2
    tensorflow_recommenders==0.6.0
    wandb==0.12.17
    fastapi==0.78.0
    uvicorn==0.17.6


[options.packages.find]
exclude =
    docs
    tests

[options.entry_points]
console_scripts =
    theia = api.commandline:main
